hint page for secrets

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <button id="" onclick="changePage('')" disabled>???</button>
         <button id="" onclick="changePage('')" disabled>???</button>
         <button id="" onclick="changePage('')" disabled>???</button>
-        <button id="" onclick="changePage('')" disabled>???</button>
+        <button id="hiddenUnlocksButton" onclick="changePage('hiddenUnlocks')">Secrets</button>
     </div>
     <div id="currencies">
         <p id="clicks" class="hidden"></p>
@@ -173,6 +173,9 @@
             <div id="totalMilestones" class="hidden noDisplay">
 
             </div>
+        </div>
+        <div id="hiddenUnlocks" class="hidden noDisplay">
+
         </div>
     </div>
 </body>
